Add additional route to handle get user by email
